Updated HTML & CSS Files
1. HTML - Removed a few class attributes and added a div element around the Footer social media icons

2. CSS - Removed a few CSS styles and added a few CSS style around the Footer social media icons

3. Fixed a few errors in HTML file updated the layout for mobile viiew in CSS file

--- a/Coder Web Responsive.css
+++ b/Coder Web Responsive.css
@@ -152,24 +152,14 @@
         font-size: 1.46rem;
         align-items: center;
     } 
-    
-    .SM_Reddit {
-        height:.5em;
-        width:.5em;
-        margin: 0 1.5em;
+
+    .Follow_On_SM {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
-    .SM_Twitter {
-        height:.5em;
-        width:.5em;
-        margin: 0 1.5em;
-    }
-    .SM_Instagram {
-        height:.5em;
-        width:.5em;
-        margin: 0 1.5em;
-    }
-    
     footer > p {
         text-align: center;
         margin: 1.5em 0;
